fixed overflow text in statusmessage panel

--- a/src/main/webapp/stylesheets/teammatesCommon.css
+++ b/src/main/webapp/stylesheets/teammatesCommon.css
@@ -243,9 +243,8 @@ Apply to thead to make headers not bold.
     padding-top: 0;
 }
 
-#addInstructorResultTable {
-    table-layout: fixed;
-    word-wrap: break-word;
+#addInstructorResultTable td{
+    word-break: break-all;
 }
 
 .text-large {
